--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "babili-webpack-plugin": "^0.0.11",
     "core-js": "^2.4.1",
     "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "mutationobserver-shim": "^0.3.2",
+    "node-sass": "^4.5.3",
     "raf": "^3.3.0",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.16.1",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "webpack": "3.5.4",
+    "webpack-dev-server": "2.7.1"
   },
   "dependencies": {
     "aurelia-bootstrapper": "^2.1.1"
