--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "license": "MIT",
   "devDependencies": {
-    "aurelia-webpack-plugin": "^2.0.0-rc.2",
+    "aurelia-webpack-plugin": "2.0.0-rc.3",
     "babel-core": "^6.23.1",
-    "babel-loader": "^v7.0.0-alpha.2",
+    "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.3.2",
     "babili-webpack-plugin": "^0.0.11",
     "core-js": "^2.4.1",
     "css-loader": "^0.28.0",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "3.0.0",
     "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "2.30.1",
     "mutationobserver-shim": "^0.3.2",
-    "node-sass": "^4.5.3",
+    "node-sass": "4.5.3",
     "raf": "^3.3.0",
     "sass-loader": "^6.0.6",
-    "style-loader":"0.18.2",
+    "style-loader": "0.18.2",
     "webpack": "3.5.4",
     "webpack-dev-server": "2.7.1"
   },
@@ -26,6 +26,7 @@
   },
   "scripts": {
     "web": "webpack-dev-server --hot --inline",
-    "prod": "webpack -p --progress --profile --colors"
+    "prod": "webpack -p --progress --profile --colors",
+    "dev": "webpack --progress --profile --colors"
   }
 }
