--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "aurelia-tools": "^1.0.0",
     "aurelia-webpack-plugin": "2.0.0-rc.3",
     "babel-core": "^6.23.1",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
