--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
   "license": "MIT",
   "devDependencies": {
-    "aurelia-tools": "^1.0.0",
+    "aurelia-tools": "1.0.0",
     "aurelia-webpack-plugin": "2.0.0-rc.3",
-    "babel-core": "^6.23.1",
-    "babel-eslint": "^7.2.3",
+    "babel-core": "6.23.1",
+    "babel-eslint": "7.2.3",
     "babel-loader": "7.1.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-env": "^1.3.2",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-preset-env": "1.6.0",
     "babili-webpack-plugin": "^0.0.11",
-    "core-js": "^2.4.1",
-    "css-loader": "^0.28.0",
-    "eslint": "^4.4.1",
+    "core-js": "2.4.1",
+    "css-loader": "0.28.4",
+    "eslint": "4.4.1",
     "extract-text-webpack-plugin": "3.0.0",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "2.30.1",
     "mutationobserver-shim": "^0.3.2",
     "node-sass": "4.5.3",
     "raf": "^3.3.0",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "webpack": "3.5.4",
     "webpack-dev-server": "2.7.1"
   },
   "dependencies": {
-    "aurelia-bootstrapper": "^2.1.1"
+    "aurelia-bootstrapper": "2.1.1"
   },
   "scripts": {
     "web": "webpack-dev-server --hot --inline",
